CKS-oline/00-execersie/Network-Policy/02-namespace/pod3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod3-ingress
  namespace: prod
spec:
  podSelector:
    matchLabels:
      run: pod-3
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    - podSelector:
        matchLabels:
          run: pod-2
